# investiq

./: .gitignore
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 00e98610f5a0_make_signal_data_indicator_id_non_.py  3afa7725dcf6_phase2_schema.py  a1b2c3d4e5f6_phase3_datetime_and_currency.py
backend/app/: main.py
backend/app/api/routes/: funds.py  indices.py  system.py
backend/app/cli/: backfill.py
backend/app/core/: config.py  constants.py  database.py
backend/app/data/: seed.py
backend/app/models/: __init__.py  market_data.py
backend/app/schemas/: funds.py  indices.py
backend/app/services/: aggregator.py  fetcher.py  indicators.py  scheduler.py
backend/deploy/: investiq.service
backend/tests/: test_aggregator.py  test_backfill.py  test_fetcher.py  test_hybrid_serving.py  test_indicators.py  test_routes.py  test_scheduler.py
docs/: investiq-datasources.md  investiq-spec.md  roadmap.md
docs/archive/: current-state.md  investiq-gap-analysis.md
docs/plans/: 2026-03-12-frontend-design.md  2026-03-12-frontend-implementation.md  2026-03-12-phase2-backend-pipeline-design.md  2026-03-12-phase2-implementation.md  2026-03-13-phase3-design.md  2026-03-13-phase3-implementation.md  2026-03-14-phase4-fund-analysis-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: BackButton.css  BackButton.tsx  BottomDrawer.css  BottomDrawer.tsx  CardGrid.css  CardGrid.tsx  ComparisonTable.css  (+39 more)
(+37 files in other folders)
